<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Queuer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="action_add_project">Add Project</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit_project">Edit Project</string>
    <string name="action_hide_project">Hide/Unhide Project</string>
    <string name="action_delete_project">Delete Project</string>
    <string name="username_hint">username or email</string>
    <string name="pwd_hint">password</string>
    <string name="remember_me">Remember me</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>

</resources>